
2018-08-19  Edward Hart <edward.dan.hart@gmail.com>

	* general: added XML GENERATE statement.
	* parser.y: added detection of XML PARSE statement.

2018-08-17  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c: added COL/LIN registers (default to disabled)
	* typeck.c, parser.y, cobc.h, tree.c, tree.h, field.c: first approach
	  on generic register creation (currently works only for TALLY/COL/LIN)

2018-08-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	FR #219 Support for COMP-N (ACU compatibility)
	* parser.y, reserved.c: added COMP-N/COMPUTATIONAL-N
	* tree.h (cb_usage): new CB_USAGE_COMP_N
	* cobc.c, codegen.c, field.c, tree.c, typeck.c: identical handling
	  for CB_USAGE_COMP_N as CB_USAGE_COMP_X
	* field.c (setup_parameters): always use portable big-endian format
	  for CB_USAGE_COMP_N

2018-08-07  Brian Tiffin <btiffin@gnu.org>

	* parser.y, reserved.c, tree.c, tree.h: CONTENTS-OF renamed to
	  CONTENT-OF

2018-08-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_identifier): added missing validation for
	  depending item, fixing bug #544
	* typeck.c (cb_emit_arithmetic): early check for valid field,
	  provides better message for condition-names FR #339 and reduces
	  the number of errors in numeric checks to the first invalid part
	  of the statement
	* typeck.c (cb_validate_one), parser.y (check_not_88_level):
	  FR #339 msgid change for invalid references
	* typeck.c (cb_emit_string): added missing validation of delimiter
	  and source items, fixing bug #543
	* parser.y (check_not_88_level): invalidate wrong items to prevent
	  multiple errors for same field

2018-07-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* scanner.l: allow floating-point literals containing no digit after
	  decimal point in significand (explicit specified in ACUCOBOL docs)
	* reserved.c, parser.y, field.c, tree.h: added parsing for VOLATILE clause